# ShaderMetal

./: .gitignore  .gitmodules  PROVENANCE.md  README.md
.codex/environments/: environment.toml
.github/workflows/: build.yml
shader-metal-template-1.21.4/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  build.gradle  gradle.properties  settings.gradle
shader-metal-template-1.21.4/native/: CMakeLists.txt
shader-metal-template-1.21.4/native/include/: com_example_shadermetal_proxy_BufferProxy.h  com_example_shadermetal_proxy_ChunkProxy.h  com_example_shadermetal_proxy_DrawCommandProxy.h  com_example_shadermetal_proxy_PipelineStateProxy.h  com_example_shadermetal_proxy_RendererProxy.h  com_example_shadermetal_proxy_ShaderProxy.h  com_example_shadermetal_proxy_TextureProxy.h  com_example_shadermetal_proxy_WindowProxy.h
shader-metal-template-1.21.4/native/shaders/: RayTrace.metal
shader-metal-template-1.21.4/native/src/core/: FrameContext.hpp  FrameContext.mm  GlfwBridge.hpp  GlfwBridge.mm  MetalDevice.hpp  MetalDevice.mm  ShaderCompiler.cpp  ShaderCompiler.hpp
shader-metal-template-1.21.4/native/src/jni/: BufferProxy.mm  ChunkProxy.mm  DrawCommandProxy.mm  PipelineStateProxy.mm  RendererProxy.mm  ShaderProxy.mm  TextureProxy.mm  WindowProxy.mm
shader-metal-template-1.21.4/native/src/raytracing/: AccelStructManager.hpp  AccelStructManager.mm  RayTracePass.hpp  RayTracePass.mm
shader-metal-template-1.21.4/native/src/render/: PipelineCache.hpp  PipelineCache.mm  PipelineStateTracker.cpp  PipelineStateTracker.hpp  RasterPass.hpp  RasterPass.mm  ShaderRegistry.hpp  ShaderRegistry.mm
shader-metal-template-1.21.4/native/src/resource/: BufferManager.hpp  BufferManager.mm  SamplerCache.hpp  SamplerCache.mm  TextureManager.hpp  TextureManager.mm  UniformStorage.hpp  UniformStorage.mm
shader-metal-template-1.21.4/native/tests/: ShaderCompilerTests.cpp
shader-metal-template-1.21.4/script/: build_and_run.sh  check_jni_contract.sh  gradle_task.sh  prepare_gamemode_app.sh  run_client_gamemode.sh
shader-metal-template-1.21.4/script/gamemode/: Info.plist  ShaderMetalDev.c
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/: ShaderMetalClient.java
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/client/: ShaderMetalClient.java  ShaderMetalDataGenerator.java
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/client/mixin/: ExampleClientMixin.java
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/mixin/: AbstractTextureMixin.java  BufferRendererMixin.java  ClientWorldMixin.java  CompiledShaderMixin.java  GameRendererMixin.java  GlStateManagerMixin.java  InGameHudMixin.java  LightmapTextureManagerMixin.java  MinecraftClientMixin.java  NativeImageMixin.java  RenderSystemMixin.java  ShaderProgramMixin.java  TextureUtilMixin.java  VertexBufferMixin.java  WindowMixin.java
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/proxy/: BufferProxy.java  ChunkProxy.java  DrawCommandProxy.java  PipelineStateProxy.java  RendererProxy.java  ShaderProxy.java  TextureProxy.java  WindowProxy.java
shader-metal-template-1.21.4/src/client/java/com/example/shadermetal/render/: CoreShaderBridge.java  GlStateBridge.java  GlslTranslator.java  RayTracingLightCollector.java  RendererLifecycle.java  TextureBridge.java
shader-metal-template-1.21.4/src/client/resources/: shader-metal.client.mixins.json
shader-metal-template-1.21.4/src/main/java/com/example/shadermetal/: ShaderMetal.java
shader-metal-template-1.21.4/src/main/java/com/example/shadermetal/mixin/: ExampleMixin.java
shader-metal-template-1.21.4/src/main/resources/: fabric.mod.json  shader-metal.mixins.json  shadermetal.mixins.json
文档/: SHADERMETAL_PROJECT_BRIEF.md
